--- a/front/pom.xml
+++ b/front/pom.xml
@@ -7,10 +7,9 @@
         <groupId>org.truespot.openclassroom</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>model</artifactId>
+    <artifactId>front</artifactId>
 
 
 </project>
