--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -12,8 +12,7 @@
     <artifactId>webapp</artifactId>
     <packaging>war</packaging>
 
-    <name>webapp Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
+    <name>TrueSpot</name>
     <url>http://www.example.com</url>
 
     <properties>
