--- a/front/truespotFront/package.json
+++ b/front/truespotFront/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "@auth0/angular-jwt": "^3.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
